# ChangeLog for schedule

*schedule-v7.2.0:
	Martin Väth <martin at mvath.de>:
	- Increase magic checksum for password verification to 496 bit
	  to be reasonably secure against DOS attacks with random data

*schedule-v7.1.1:
	Martin Väth <martin at mvath.de>:
	- Fix queuing of empty jobs

*schedule-v7.1.0:
	Martin Väth <martin at mvath.de>:
	- Fix loglevel severity 'warning'
	  Security fix! (DOS: let server finish without knowing the password)
	- Check for correct Server::Serverfuncs version
	- Let shell script run with set -u

*schedule-v7.0.5:
	Martin Väth <martin at mvath.de>:
	- Avoid redundant quoting in shell scripts

*schedule-v7.0.4:
	Martin Väth <martin at mvath.de>:
	- Fix start-stop-daemon usage for openrc

*schedule-v7.0.3:
	Martin Väth <martin at mvath.de>:
	- internal: prefer each() and array-loops over index bookkeeping

*schedule-v7.0.2:
	Martin Väth <martin at mvath.de>:
	- Support separate start/stop options for openrc

*schedule-v7.0.1:
	Martin Väth <martin at mvath.de>:
	- Use openrc-run instead of deprecated runscript

*schedule-v7.0.0:
	Martin Väth <martin at mvath.de>:
	- Support logging (to syslog as well as to file)
	- Use logging in startup scripts
	- require_order of options (regression from v6.3.1)
	- Bump all file versions to 7.0.0

*schedule-v6.3.1:
	Martin Väth <martin at mvath.de>:
	- Change --qtime default to %R (no seconds)
	- Use gnu_getopt

*schedule-v6.3.0:
	Martin Väth <martin at mvath.de>:
	- Record and output queue/start/end time (with corresponding options)
	- internal: remove wrong prototypes in function definitions
	- internal: slightly simplify --text parsing

*schedule-v6.2.1:
	Martin Väth <martin at mvath.de>:
	- Use only recommended obj-syntax (no new ...)
	- Document versioning and that lib/Schedule/Connect.pm is version file

*schedule-v6.2.0:
	Martin Väth <martin at mvath.de>:
	- Support socket-based activation of (x)inetd/systemd.
	  Thanks a lot to Christian Mock <cm at tahina.priv.at> for explaining